styles.css
body {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    align-items: center;
    justify-content: center;
    height: 100vh;
}


.calc {
    width: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    border: 5px solid black;
}

.row {
    display: flex;
}

.nums { 
    display: flex;
}

button {
    width: 100px;
    height: 100px;
    font-size: 24px;
}

.zero {
    display: flex;
    justify-content: flex-start;
}

.display {
    width: 400px;
    height: 125px;
    background-color: grey;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    font-size: 100px;
}

